# github-repo-tool

./: CHANGELOG.md  CMakeLists.txt  README.md  SPEC.md  configure.sh  git-push-resolve.sh  install.sh
docs/: gh-repo.1  manual.md
src/: config.cpp  config.h  constants.h  git_utils.cpp  git_utils.h  github.cpp  github.h  main.cpp  repl.cpp  repl.h
test/: main.cpp
